[tool.poetry]
name = "example"
package-mode = false
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "*"
django-environ = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
