[tool.poetry]
name = "example"
package-mode = false
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "*"
django-environ = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-pyproject = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = [
    "E501",  # line too long
]
