[project]
name = "example"
version = "0.1.0"
description = ""
authors = [
    {name = "My Name",email = "me@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "sentry-sdk[fastapi]"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8",
    "flake8-pyproject",
    "flake8-isort",
    "pytest",
    "httpx"
]

[tool.flake8]
ignore = [
    "E501",  # line too long
]

[tool.isort]
skip_gitignore = true
lines_after_imports = 2
# 5 = Hanging Grid Grouped
multi_line_output = 5
include_trailing_comma = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
