[project]
name = "example"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Rydzewski",email = "flegmer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-pyproject = "*"
flake8-isort = "*"
pytest = "*"


[tool.flake8]
ignore = [
    "E501",  # line too long
]

[tool.isort]
skip_gitignore = true
lines_after_imports = 2
# 5 = Hanging Grid Grouped
multi_line_output = 5
include_trailing_comma = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
